--- a/index.html
+++ b/index.html
@@ -1,46 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="styles.css
-    "
-    />
-    <title>project</title>
-  </head>
-  <body>
-    <h1>Menu card</h1>
-
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About us</a></li>
-      <li><a href="#">Activities</a></li>
-      <li><a href="#">Gallery</a></li>
-      <li><a href="#">contact us</a></li>
-      <li><a href="#">login</a></li>
-    </ul>
-    <br /><br /><br />
-
-    <div class="container">
-      <div class="content">
-      <h1>About us</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, placeat
-        quisquam dolores impedit doloremque est suscipit reprehenderit tenetur
-        numquam, sed consequuntur, soluta vitae esse distinctio cum eos beatae
-        aliquam illo eum provident. Architecto explicabo neque aspernatur
-        nostrum eaque, libero tempore optio rerum dolorum esse distinctio
-        recusandae, possimus, ea aliquid ad. Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Ad corporis esse aliquid provident
-        obcaecati voluptate cupiditate tempore? Vero voluptate voluptates aut
-        maxime a? Excepturi quia minus deserunt, ex eum nulla. Cumque expedita
-        incidunt pariatur, quaerat ipsam debitis dignissimos excepturi alias.
-      </p>
-      <img src="ai.jpg" alt="this is the image">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Coffee Time</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header class="hero">
+    <div class="hero-content">
+      <h1>Start Your Day with Coffee</h1>
+      <p>Freshly brewed coffee delivered to your door. Wake up to the rich aroma every morning!</p>
+      <a href="#" class="btn">Order Now</a>
     </div>
-    </div>
-
-  </body>
+  </header>
+</body>
 </html>
