--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <p>Freshly brewed coffee delivered to your door. Wake up to the rich aroma every morning!</p>
       <a href="#" class="btn">Order Now</a>
     </div>
+
+  
+    <h1>coffee</h1>
   </header>
 </body>
 </html>
